--- a/styles/_link.scss
+++ b/styles/_link.scss
@@ -7,6 +7,7 @@
   height: $icon-size;
   overflow: hidden;
   justify-content: center;
+  margin: #{$gap};
 
   @include content-key {
     width: $icon-size;
