--- a/styles/_links_group.scss
+++ b/styles/_links_group.scss
@@ -3,6 +3,5 @@
   margin: {
     left: auto;
     right: auto;
-  }
-  gap: #{$gap};
+}
 }
